test/langtools/tools/javac/specialConstantFolding/IndyCrashTest.out
IndyCrashTest.java:26:58: compiler.err.method.handle.not.suitable.indy: ()java.lang.invoke.CallSite
1 error
